Fix images not wrapping Fixed images not wrapping when zooming in.

--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,7 @@ h1{
     display: flex; 
     justify-content: space-evenly;  
     margin-bottom: 40px;
+    flex-wrap: wrap;
 }
 
 .image {
